fixed jumps and combo
- jumps now only count as one note
- good hits now keep your combo

--- a/metrics.ini
+++ b/metrics.ini
@@ -2077,6 +2077,7 @@ TipOnCommand=shadowlength,1;diffuseshift;effectperiod,1.25
 [Gameplay]
 MinScoreToMaintainCombo=GetComboThreshold('Maintain')
 MinScoreToContinueCombo=GetComboThreshold('Continue')
+ComboIsPerRow=true
 
 [PlayerStageStats]
 # copied directly from freem's ITG3 port
